  environment variable
* Rename cp-shutdown-bench test utility to darshan-shutdown-bench and enable
  benchmarking hooks in library by default so that darshan-shutdown-bench 
  can be used with any Darshan installation.
* Change default MPI-IO hints for writing log file to
  romio_no_indep_rw=true and cb_nodes=4 to improve log creation performance

darshan-2.2.5
=============
* Fix bug in mount point identification when --enable-stat-at-open option is
  not used.  In Darshan 2.2.4, some file entries were recorded as using the "/"
  file system regardless of their location.
* Update patches and documentation for Cray xt-asyncpe environment 5.12 or 
  higher; contributed by Yushu Yao.
* Update documentation to no longer recommend --enable-stat-at-open option on 
  any systems
* Fix unresolved symbols error when linking non-MPI programs with Cray
  compiler.  Reported by Yushu Yao.
* Use fstat() in place of stat() for detecting file information when
  --enable-stat-at-open option is used
* Use statfs() at startup to detect default block size for supported file
  systems
* Added --enable-group-readable-logs configure option, which will cause
  Darshan to to generate log files with the group read permission bit set.
  This option is useful in conjunction with deployments that set the setgid
  bit on log directories.

darshan-2.2.4
=============
* Disable extra stat() of newly opened files by default.  This improves 
  performance on shared files for some platforms.  Reported by Yushu Yao.
  - prevents Darshan from reporting SIZE_AT_OPEN, FILE_ALIGNENT, and 
    DARSHAN_FILE_NOT_ALIGNED values
  - features can still be enabled via --enable-stat-at-open option
* Fix missing -lz in post ld flags reported by Yushu Yao.  Fixes a link-time
  error for some corner-case applications.
* Fix bug in Cray compiler script patches that was setting compiler flags 
  incorrectly.  Reported by Yushu Yao.
  WARNING: if you are using a previous Darshan release (2.2.3 through