@@ -57,16 +57,6 @@ AC_ARG_ENABLE(stat-at-open,
 fi]
 ,)
 
-
-AC_ARG_ENABLE(st-dev-workaround, 
-[  --enable-st-dev-workaround Gather device id from parent directory instead of file], 
-[if test "x$enableval" = "xyes" ; then
-    AC_DEFINE(__CP_ST_DEV_WORKAROUND, 1, Define if device id should be taken from parent directory rather than file)
-    DISABLE_LDPRELOAD="1"
-fi]
-,)
-
-
 AC_ARG_WITH(mem-align,
 [  --with-mem-align=<num>  Memory alignment in bytes],
     if test x$withval = xyes; then
