@@ -13,6 +13,9 @@ darshan-2.2.6-pre1
   can be used with any Darshan installation.
 * Change default MPI-IO hints for writing log file to
   romio_no_indep_rw=true and cb_nodes=4 to improve log creation performance
+* Optimize darshan startup by collecting mount point information at rank 0 and
+  broadcasting to all processes
+* Remove deprecated --enable-st-dev-workaround configure option
 
 darshan-2.2.5
 =============
